# Software

docs/: code-style-guide.md  getting-started-wsl.md  getting-started.md  robot-software-architecture.md  software-architecture-and-design.md  useful-robot-commands.md
src/: MODULE.bazel  tbots.py
src/proto/: BUILD  parameters.proto  pyi_proto_library.bzl  robot_status_msg.proto
src/proto/message_translation/: power_frame_msg.hpp
src/proto/python_stubs/: BUILD  protoc_gen_mypy_wrapper.py  requirements.in  requirements_lock.txt
src/shared/: robot_constants.cpp
src/shared/uart_framing/: uart_framing.hpp  uart_framing_test.cpp
src/software/: BUILD  generate_stubs.py
src/software/ai/: play_selection_fsm_test.cpp
src/software/embedded/: BUILD  primitive_executor.h  thunderloop.cpp  thunderloop.h
src/software/embedded/ansible/: requirements_lock.txt
src/software/embedded/motor_controller/: motor_controller.h  stspin_motor_controller.cpp  stspin_motor_controller.h  tmc_motor_controller.cpp  tmc_motor_controller.h
src/software/jetson_nano/: thunderloop.cpp
src/software/power/: BUILD  auto_reset.py  dribbler.cpp  powerloop_main.cc
src/software/sensor_fusion/: BUILD  sensor_fusion.cpp  sensor_fusion.h  sensor_fusion_test.cpp
src/software/sim_to_real/: BUILD  auto_tune.py  extract_game_events.py  extract_kinematics_events.py  optuna_gameplay_tuner.py  optuna_physics_tuner.py  requirements.in  requirements_lock.txt
src/software/sim_to_real/tests/e2e/: BUILD.bazel  conftest.py  test_tier1.py  test_tier2.py  test_tier3.py
src/software/thunderscope/: requirements.in  requirements_lock.txt  robot_communication.py
src/software/uart/: boost_uart_communication.cpp
(+33 files in other folders)
